--- a/src/app/offers/edit-offers/edit-offers.component.html
+++ b/src/app/offers/edit-offers/edit-offers.component.html
@@ -23,15 +23,16 @@
                 <div class="col-sm-4">
                     <label for=""> Shop Name</label>
 
-                    <select name="" id="" class="form-control" [(ngModel)]="sname" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
+                    <select name="" id="" class="form-control" [(ngModel)]="sname" (change)="shopselcted(sname)" [ngClass]="{ 'is-invalid': submitted && f.sname.errors }" formControlName="sname">
                         <option value="" disabled selected>Choose a option </option>
-                        <option *ngFor="let s of results" value="{{s._id}}">{{s.shop_name}}</option>
+                        <option *ngFor="let s of results" value="{{s._id}}" >{{s.shop_name}}</option>
                     </select>
                     <div *ngIf="submitted && f.sname.errors" class="invalid-feedback">
                         <div *ngIf="f.sname.errors.required">Shop name is required</div>
 
                     </div>
                 </div>
+
 
                 <div class="col-sm-4">
                     <label for=""> Menu Name</label>
@@ -47,13 +48,14 @@
                     <label for=""> Offer Location</label>
                     <select name="" id="" class="form-control" [(ngModel)]="oloc" [ngClass]="{ 'is-invalid': submitted && f.oloc.errors }" formControlName="oloc">
                         <option value="" disabled selected>Choose a option </option>
-                        <option *ngFor="let s of location" value="{{s._id}}">{{s.location}}</option>
+                        <option *ngFor="let s of locations" value="{{s._id}}">{{s.location}}</option>
                     </select>
                     <div *ngIf="submitted && f.oloc.errors" class="invalid-feedback">
                         <div *ngIf="f.oloc.errors.required">Offer Location is required</div>
 
                     </div>
                 </div>
+
 
                 <div class="col-sm-4">
                     <label for="">Purchase Price </label>
