--- a/src/app/offers/offers.component.html
+++ b/src/app/offers/offers.component.html
@@ -44,7 +44,7 @@
                     <!--Total Quantity to Purchase Column -->
                     <ng-container matColumnDef="totalquantitytopurchase">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Total Quantity to Purchase </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.total_qnty}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.No_users}} </mat-cell>
                     </ng-container>
 
 
