--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -54,8 +54,8 @@
 <div class="footer">
     <p>(c) DEVELOPED AND MAINTAINED BY SATMAYA DIGITAL SOLUTIONS</p>
 </div>
-
+<!-- 
 <embed src="http://45.79.122.125:8080/prestige/api/unprotect/ins-report/view/825
-  " width="500" height="375" autofocus="true">
+  " width="500" height="375" autofocus="true"> -->
 
 <!-- <embed src="http://45.79.122.125:8080/prestige/api/unprotect/ins-report/view/825" type=""> -->
