--- a/src/app/home/approval-request/menu-approval/menu-approval.component.html
+++ b/src/app/home/approval-request/menu-approval/menu-approval.component.html
@@ -35,13 +35,19 @@
 
 
 
+
                     <!--Location Column -->
                     <ng-container matColumnDef="location">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> menu_img </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> <img style="width: 100px;" src="https://shopgi.in/location_addrestaurent/get/image/{{row._id}}" alt=""> </mat-cell>
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Location </mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.locationId.location}} </mat-cell>
+
                     </ng-container>
 
+                    <ng-container matColumnDef="menuimage">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Menu Image </mat-header-cell>
+                        <mat-cell *matCellDef="let row"> <img style="width: 100px;" src="https://shopgi.in/location_addrestaurent/get/image/{{row._id}}" alt=""> </mat-cell>
 
+                    </ng-container>
                     <!-- Date Column
                     <ng-container matColumnDef="date">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
@@ -77,7 +83,7 @@
                     <ng-container matColumnDef="action">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                            <button class="btn btn-primary">Edit</button> &nbsp;
+                            <!-- <button class="btn btn-primary">Edit</button> &nbsp; -->
                             <button class="btn btn-success" (click)="approve(row)">Approve</button>&nbsp;
                             <button class="btn btn-danger" (click)="Reject(row)">Reject</button>
 
