--- a/src/app/home/shop-menu/shop-menu.component.html
+++ b/src/app/home/shop-menu/shop-menu.component.html
@@ -112,7 +112,8 @@
                     </mat-row>
                 </mat-table>
 
-                <mat-paginator></mat-paginator>
+
+                <mat-paginator #paginator [length]="totalLength" [pageSize]="limit" (page)="changePage($event)"></mat-paginator>
             </div>
         </div>
     </div>
