--- a/src/app/home/restaurant-menu/restaurant-menu.component.html
+++ b/src/app/home/restaurant-menu/restaurant-menu.component.html
@@ -20,7 +20,7 @@
                 <select class="form-control" id="" [(ngModel)]="options" (change)="filter1(options)">
                 <option value="" selected>Choose a option</option>
                 <option value="c">Course Type</option>
-                <option value="m">Menu Name</option>
+                <!-- <option value="m">Menu Name</option> -->
               
             </select>
             </div>
@@ -60,8 +60,8 @@
                 <ng-container matColumnDef="menuimage">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Menu Image </mat-header-cell>
                     <mat-cell *matCellDef="let row">
-                        <!-- <img src="{{apiUrl}}menurest/get/image/{{row._id}}" alt=""> -->
-                        <button matTooltip="View Image" (click)="view(row._id)"> <i class="fa fa-eye"></i> </button>
+                        <img src="{{apiUrl}}menurest/get/image/{{row._id}}" alt="" style="width: 100px;">
+                        <!-- <button matTooltip="View Image" (click)="view(row._id)"> <i class="fa fa-eye"></i> </button> -->
                     </mat-cell>
                 </ng-container>
 
