--- a/src/app/home/users/users.component.html
+++ b/src/app/home/users/users.component.html
@@ -10,6 +10,8 @@
             <div class="col-sm-8">
                 <h4 class="page-title">USERS</h4>
 
+                <input type="text" class="form-control" placeholder="search here" (keyup)="applyFilter($event.target.value)">
+
             </div>
 
 
