--- a/src/app/home/users/users.component.html
+++ b/src/app/home/users/users.component.html
@@ -10,6 +10,9 @@
             <div class="col-sm-8">
                 <h4 class="page-title">USERS</h4>
 
+
+            </div>
+            <div class="col-sm-4">
                 <input type="text" class="form-control" placeholder="search here" (keyup)="applyFilter($event.target.value)">
 
             </div>
@@ -63,8 +66,8 @@
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
                         <mat-cell *matCellDef="let row">
 
-                            <button class="btn btn-success">Active</button> &nbsp;
-                            <button class="btn btn-danger">InActive</button>
+                            <button class="btn btn-success" *ngIf="row.user_state == 'Inactive'">Active</button> &nbsp;
+                            <button class="btn btn-danger" *ngIf="row.user_state == 'Active'">InActive</button>
 
                         </mat-cell>
                     </ng-container>
