--- a/src/app/home/shop-menu/shop-menu.component.html
+++ b/src/app/home/shop-menu/shop-menu.component.html
@@ -19,7 +19,7 @@
                 <select class="form-control" id="" [(ngModel)]="options" (change)="filter1(options)">
                 <option value="" selected>Choose a option</option>
                 <option value="s">Shop Name</option>
-                <option value="l">Location</option>
+                <!-- <option value="l">Location</option> -->
                 
 
               </select>
