--- a/src/app/home/orders/orders.component.html
+++ b/src/app/home/orders/orders.component.html
@@ -38,14 +38,14 @@
                     <!--Time Column -->
                     <ng-container matColumnDef="time">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Time </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.order_time | slice:11:19}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.order_time}} </mat-cell>
                     </ng-container>
 
 
                     <!--  Date Column -->
                     <ng-container matColumnDef="date">
                         <mat-header-cell *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.order_time | slice:0:10}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.date}} </mat-cell>
                     </ng-container>
 
                     <!--     
