--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -66,7 +66,7 @@
                     <a routerLink="/preorders"><i class="fa fa-shopping-basket"></i> <span>PRE-ORDERS</span></a>
                 </li>
 
-                <li routerLinkActive="active" *ngIf="status =='masteradmin'">
+                <li routerLinkActive="active">
                     <a routerLink="/users"><i class="fa fa-users"></i> <span>USERS</span></a>
                 </li>
 
