--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -70,7 +70,7 @@
                     <a routerLink="/users"><i class="fa fa-users"></i> <span>USERS</span></a>
                 </li>
 
-                <li routerLinkActive="active" *ngIf="status =='masteradmin'">
+                <li routerLinkActive="active">
                     <a routerLink="/reports"><i class="fa fa-sticky-note"></i> <span>REPORTS</span></a>
                 </li>
 
