--- a/src/app/home/shop/shop.component.html
+++ b/src/app/home/shop/shop.component.html
@@ -37,7 +37,7 @@
                     <option value="" selected>Choose a option</option>
                     <!-- <option value="s">Shop</option> -->
                     <option value="l">Location</option>
-                    <option value="c">Category</option>
+                    <!-- <option value="c">Category</option> -->
 
                 </select>
             </div>
