--- a/src/app/settings/admin-credentials/admin-credentials.component.html
+++ b/src/app/settings/admin-credentials/admin-credentials.component.html
@@ -63,6 +63,12 @@
                         </mat-cell>
                     </ng-container>
 
+                    <ng-container matColumnDef="edit">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Password </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                            <button class="btn btn-primary" (click)="edit(row)">Edit</button>
+                        </mat-cell>
+                    </ng-container>
 
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: displayedColumns;">
