--- a/src/app/settings/admin-credentials/edit-admin-credentials/edit-admin-credentials.component.html
+++ b/src/app/settings/admin-credentials/edit-admin-credentials/edit-admin-credentials.component.html
@@ -33,12 +33,12 @@
 
                 </div>
 
-                <div class="col-sm-4">
+                <div class="col-sm-4" *ngIf="role == '2'">
                     <label for="">Location </label>
 
                     <select name="" id="" class="form-control" [(ngModel)]="location" [ngClass]="{ 'is-invalid': submitted && f.location.errors }" formControlName="location">
                         <option value="" disabled selected>Choose a option </option>
-                        
+                        <option *ngFor="let result of result" value="{{result._id}}">{{result.location}}</option>
                     </select>
                     <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
                         <div *ngIf="f.location.errors.required">Location is required</div>
