--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -62,7 +62,7 @@
                     <a routerLink="/orders"><i class="fa fa-shopping-basket"></i> <span>ORDERS</span></a>
                 </li>
 
-                <li routerLinkActive="active" *ngIf="status =='masteradmin'">
+                <li routerLinkActive="active">
                     <a routerLink="/preorders"><i class="fa fa-shopping-basket"></i> <span>PRE-ORDERS</span></a>
                 </li>
 
