--- a/src/app/home/approval-request/approval-request.component.html
+++ b/src/app/home/approval-request/approval-request.component.html
@@ -15,7 +15,14 @@
                 <div class="card" routerLink="/menuapproval">
                     <img src="https://img.icons8.com/bubbles/100/000000/approval.png" />
 
-                    <h5>Menu Approval</h5>
+                    <h5>Restaurant Menu Approval</h5>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" routerLink="/geranlmenuapproval">
+                    <img src="https://img.icons8.com/clouds/100/000000/approval.png" />
+
+                    <h5>Genral Menu Approval</h5>
                 </div>
             </div>
             <!-- <div class="col-sm-4">
