--- a/src/app/home/approval-request/location-admin-view-pendingrequest/location-admin-view-pendingrequest.component.css
+++ b/src/app/home/approval-request/location-admin-view-pendingrequest/location-admin-view-pendingrequest.component.css
@@ -7,3 +7,16 @@
     padding: 20px;
     background: white;
 }
+
+img {
+    margin: 0 auto;
+    display: block;
+}
+
+.card {
+    padding: 10px;
+}
+
+h5 {
+    text-align: center;
+}
