--- a/src/app/home/approval-request/location-admin-view-pendingrequest/location-admin-view-pendingrequest.component.html
+++ b/src/app/home/approval-request/location-admin-view-pendingrequest/location-admin-view-pendingrequest.component.html
@@ -9,94 +9,29 @@
         <div class="row">
 
             <div class="col-sm-8">
-                <h4 class="page-title">Pending Request List</h4>
+                <h4 class="page-title">Adding Restaurant & Gernal Menu Request</h4>
 
             </div>
 
-            <div class="col-sm-4">
-                <button class="btn btn-primary" style="float: right;" routerLink="/addmenuforapproval"> Add Restaurant Menu</button>
-            </div>
         </div>
-
-
-
-
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-4">
+                <div class="card" routerLink="/addmenuforapproval">
+                    <img src="https://img.icons8.com/bubbles/100/000000/approval.png" />
 
-                <mat-table [dataSource]="dataSource" matSort>
-
-                    <!-- ID Column -->
-                    <ng-container matColumnDef="id">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-                        <mat-cell *matCellDef="let row; let i =index;">M{{i+1}} </mat-cell>
-                    </ng-container>
-
-                    <!-- Menu Name Column -->
-                    <ng-container matColumnDef="menuname">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Menu Name</mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.menu_name}}</mat-cell>
-                    </ng-container>
-
-                    <!--Image Column -->
-                    <ng-container matColumnDef="menuimage">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Menu Image </mat-header-cell>
-                        <mat-cell *matCellDef="let row">
-                            <!-- <img src="{{apiUrl}}menurest/get/image/{{row._id}}" alt="" style="width: 100px;">  -->
-                            <button matTooltip="View Image" (click)="view(row._id)"> <i class="fa fa-eye"></i> </button>
-                        </mat-cell>
-                    </ng-container>
-
-                    <!-- Location Column
-                <ng-container matColumnDef="location">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Location </mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{row.location}} </mat-cell>
-                </ng-container> -->
-
-
-                    <!-- Action Column -->
-                    <ng-container matColumnDef="action">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
-                        <mat-cell *matCellDef="let row">
-                            <button *ngIf="status =='masteradmin'" class="btn btn-success" (click)=edit(row)><i class="fa fa-edit" style="color: white;"></i></button> &nbsp;
-                            <div *ngIf="status =='masteradmin'">
-
-                                <button class="btn btn-warning" (click)="active(row)" *ngIf="row.menu_state == 'Inactive'">Active </button>&nbsp;
-                                <button class="btn btn-danger" (click)="inactive(row)" *ngIf="row.menu_state == 'Active'">In-Active  </button>
-                            </div>
-
-                        </mat-cell>
-
-                    </ng-container>
-
-                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: displayedColumns;">
-                    </mat-row>
-                </mat-table>
-
-                <mat-paginator #paginator [length]="totalLength" [pageSize]="limit" (page)="changePage($event)"></mat-paginator>
-                <!-- <div class="paginationsection">
-
-                <div class="row">
-                    <div class="col-sm-6">
-
-                    </div>
-                    <div class="col-sm-4">
-                        <p style="text-align: end;"> of {{totalLength}}</p>
-                    </div>
-                    <div class="col-sm-2" style="text-align: end; cursor: pointer;">
-                        <span class="material-icons" matTooltip="Previous">
-                    keyboard_arrow_left
-                    </span>
-                        <span class="material-icons" matTooltip="Next">
-                    keyboard_arrow_right
-                    </span>
-                    </div>
+                    <h5>Add Restaurant Menu for Approval</h5>
                 </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" routerLink="/geranlmenuforapproval">
+                    <img src="https://img.icons8.com/clouds/100/000000/approval.png" />
 
-
-
-            </div> -->
+                    <h5>Add General Menu for Approval</h5>
+                </div>
             </div>
         </div>
+
+
+
+
     </div>
