--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -32,19 +32,19 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="card" routerLink="/priceupdator">
+                <div class="card" routerLink="/addpriceupdator">
                     <img src="./assets/img/icons8-price-tag-100.png" alt="" style="    height: 150px;">
                     <h5>Price Updater</h5>
 
                 </div>
             </div>
-            <div class="col-sm-4">
+            <!-- <div class="col-sm-4">
                 <div class="card" routerLink="/shopcredentials">
                     <img src="./assets/img/forgot-password.png" alt="" style="    height: 150px;">
                     <h5>Shop Credentials</h5>
 
                 </div>
-            </div>
+            </div> -->
 
             <div class="col-sm-4">
                 <div class="card" routerLink="/admincredentials">
