--- a/src/app/home/pre-orders/view-pre-orders/view-pre-orders.component.html
+++ b/src/app/home/pre-orders/view-pre-orders/view-pre-orders.component.html
@@ -5,8 +5,8 @@
 
 
 <p>Booking ID : {{details.porder_id}}</p>
-<p>Total Amount : {{details.total_price}}</p>
-<p>Payment Mode : {{details.order_pmode}}</p>
+<p>Total Amount : {{details.amount}}</p>
+<p>Payment Mode : {{details.payment_type}}</p>
 <p>Shop Name : {{sname}}</p>
 <p>Shop Contact Number : {{sphone}}</p>
 <hr>
