--- a/src/app/home/approval-request/location-admin-view-pendingrequest/location-admin-view-pendingrequest.component.html
+++ b/src/app/home/approval-request/location-admin-view-pendingrequest/location-admin-view-pendingrequest.component.html
@@ -9,7 +9,7 @@
         <div class="row">
 
             <div class="col-sm-8">
-                <h4 class="page-title">Adding Restaurant & Gernal Menu Request</h4>
+                <h4 class="page-title">Adding Restaurant & General Menu Request</h4>
 
             </div>
 
