--- a/src/app/home/pre-orders/pre-orders.component.html
+++ b/src/app/home/pre-orders/pre-orders.component.html
@@ -37,7 +37,7 @@
                     <!--Booking Date Column -->
                     <ng-container matColumnDef="bookingdate">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Booking Date </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.order_date}} </mat-cell>
+                        <mat-cell *matCellDef="let row"> {{row.order_time}} </mat-cell>
                     </ng-container>
 
                     <!--Customer Name & Address Column -->
