--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -75,7 +75,7 @@
                     <a routerLink="/reports"><i class="fa fa-sticky-note"></i> <span>REPORTS</span></a>
                 </li>
 
-                <li routerLinkActive="active" *ngIf="status =='masteradmin'">
+                <li routerLinkActive="active" >
                     <a routerLink="/settings"><i class="fa fa-cog"></i> <span>SETTINGS</span></a>
                 </li>
             </ul>
