--- a/src/app/home/shop-menu/shop-menu.component.html
+++ b/src/app/home/shop-menu/shop-menu.component.html
@@ -12,7 +12,7 @@
                 <div class="row">
                     <h4 class="page-title">RESTAURANT MENU</h4>
                     <button class="btn btn-primary" style="height: 33px;
-                    margin-left: 23px;" routerLink="/addshopmenu"> Add Restaurant Menu</button>
+                    margin-left: 23px;"><a routerLink="/addshopmenu" target="_blank" style="color: white;">Add Restaurant Menu</a> </button>
                 </div>
             </div>
             <div class="col-sm-2">
