--- a/src/app/reports/purchase/purchase.component.html
+++ b/src/app/reports/purchase/purchase.component.html
@@ -24,7 +24,9 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-3"></div>
+            <div class="col-sm-3">
+                
+            </div>
             <div class="col-sm-3">
                 <label for="">Shop</label>
                 <select name="" id="" class="form-control" (change)="shopevent($event)">
