--- a/src/app/reports/sales/sales.component.html
+++ b/src/app/reports/sales/sales.component.html
@@ -36,8 +36,12 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-3">
 
+            </div>
+            <div class="col-sm-3">
+                <label for="">Single date reports</label>
+                <input type="date" class="form-control" data-date-format="DD MMMM YYYY" (change)="singledate($event)">
             </div>
             <div class="col-sm-3">
                 <label for="">From</label>
