--- a/src/app/home/delivery-boys/collect-cash-component/collect-cash-component.component.html
+++ b/src/app/home/delivery-boys/collect-cash-component/collect-cash-component.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-sm-12">
-        <label for="">Collect Cash</label>
+        <label for="">Collect Cash - {{cashinhand}}</label>
         <input type="text" class="form-control" [(ngModel)]="points">
 
-        <label for="">Earnings</label>
+        <label for="">Earnings - {{earningspointdisplay}}</label>
         <input type="text" class="form-control" [(ngModel)]="earnings">
 
     </div>
