--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -77,6 +77,14 @@
 
                 </div>
             </div>
+
+            <div class="col-sm-4" *ngIf="status=='masteradmin'">
+                <div class="card" routerLink="/newuserlocationredeempoint">
+                    <img src="./assets/img/redeempoint.png" alt="" style="    height: 150px;">
+                    <h5>New User Location Redeempoint</h5>
+
+                </div>
+            </div>
         </div>
 
     </div>
