--- a/src/app/settings/new-user-location-redeempoint/new-user-location-redeempoint.component.html
+++ b/src/app/settings/new-user-location-redeempoint/new-user-location-redeempoint.component.html
@@ -8,7 +8,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title">New User Location Reddem Point</h4>
+                <h4 class="page-title">New User Location Redeem Point</h4>
 
             </div>
 
@@ -23,7 +23,7 @@
                 <mat-table [dataSource]="dataSource" matSort>
 
 
-               
+
 
 
                     <!-- Location Column -->
@@ -34,11 +34,11 @@
 
 
 
-                         <!--Redeem Amount Column -->
-                         <ng-container matColumnDef="ramount">
-                            <mat-header-cell *matHeaderCellDef mat-sort-header> Redeem Amount </mat-header-cell>
-                            <mat-cell *matCellDef="let row"> {{row.point}} </mat-cell>
-                        </ng-container>
+                    <!--Redeem Amount Column -->
+                    <ng-container matColumnDef="ramount">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> Redeem Amount </mat-header-cell>
+                        <mat-cell *matCellDef="let row"> {{row.point}} </mat-cell>
+                    </ng-container>
 
                     <!-- Action Column -->
                     <ng-container matColumnDef="action">
