--- a/src/app/settings/new-user-location-redeempoint/edit-new-user-location-redeempoint/edit-new-user-location-redeempoint.component.html
+++ b/src/app/settings/new-user-location-redeempoint/edit-new-user-location-redeempoint/edit-new-user-location-redeempoint.component.html
@@ -11,7 +11,7 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h4 class="page-title">Add New User Location Reddem Point</h4>
+                <h4 class="page-title">Add New User Location Redeem Point</h4>
 
             </div>
         </div>
@@ -19,8 +19,8 @@
 
             <div class="row">
 
-                
-       
+
+
 
                 <div class="col-sm-6">
                     <label for="">Location </label>
