--- a/src/app/home/orders/view-order-details/view-order-details.component.html
+++ b/src/app/home/orders/view-order-details/view-order-details.component.html
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<!-- <div *ngIf="changenamearray.length != 0">
+<div *ngIf="changenamearray.length != 0">
     <hr>
     <p style="font-weight: bold; text-align: center;">Order Address changed</p>
     <div *ngFor="let changenamearray of changenamearray">
@@ -42,7 +42,7 @@
     </div>
     <hr>
 
-</div> -->
+</div>
 
 <p>Booking ID : {{details.order_id}}</p>
 <p>Total Amount : {{details.total_price}}</p>
